--- a/3.html
+++ b/3.html
@@ -36,7 +36,7 @@
       <div class="stick-this" id="stick-this">
         <div class="strip">
           <div class="flex flex--aligned">
-            <img src="/images/map-icon.png" alt="" class="hero__map">
+            <img src="images/map-icon.png" alt="" class="hero__map">
             <div class="hero__content">
               <h1 class="flat">Los Angeles</h1>
               <p class="flat">California</p>
