--- a/1.html
+++ b/1.html
@@ -34,7 +34,7 @@
         </div>
         <div class="hero__footer scrim">
           <div class="flex flex--aligned">
-            <img src="/images/map-icon.png" alt="" class="hero__map">
+            <img src="images/map-icon.png" alt="" class="hero__map">
             <div class="hero__content">
               <h1 class="flat">Los Angeles</h1>
               <p class="flat">California</p>
